--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     </style>
 </head>
 <body>
-    <h1>Wil Je Hem Niet?</h1>
+    <h1>Wil Je Hem Niet? dan moet je een andere website op gaan :) </h1>
 </body>
 </html>
